--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "collect-phone-numbers",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Pull all phone numbers from a directory of text files",
   "main": "index.js",
   "scripts": {
@@ -21,5 +21,8 @@
   "license": "ISC",
   "dependencies": {
     "async": "^1.5.2"
+  },
+  "devDependencies": {
+    "assert": "^1.3.0"
   }
 }
