--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "collect-phone-numbers",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Pull all phone numbers from a directory of text files",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "node test.js"
   },
   "bin": {
     "collect-phone-numbers": "./bin/collect-phone-numbers"
