--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "collect-phone-numbers",
-  "version": "1.0.5",
-  "description": "Pull all phone numbers from a directory of text files",
+  "version": "1.1.0",
+  "description": "Pull all phone numbers from a directory of text files, output a single csv file",
   "main": "index.js",
   "scripts": {
     "test": "node test.js"
@@ -21,8 +21,5 @@
   "license": "ISC",
   "dependencies": {
     "async": "^1.5.2"
-  },
-  "devDependencies": {
-    "assert": "^1.3.0"
   }
 }
